# PyLens

./: .env.example  .gitignore  CODEX_CONTEXT.md  README.md  pyproject.toml
.github/actions/pylens-action/: action.yml
.github/workflows/: ci.yml  dogfooding.yml  pylens-review.yml
ags/: __init__.py
ags/core/: __init__.py
ags/core/graph/: __init__.py  architectural_graph.py  builders.py  communities.py  metrics.py
ags/core/observation/: __init__.py  classification.py  primitives.py
ags/synthetic/: regimes.py
app/: __init__.py  auth.py  db.py  decision_engine.py  exceptions.py  main.py  models.py
app/analysis/: __init__.py  architectural.py  quality.py  report.py  static_analysis.py
app/llm/: __init__.py  optimizer.py  router.py  verifier.py
app/targets/: __init__.py
app/targets/crystal/: __init__.py  transpiler.py
cmd/pylens/: go.mod  main.go
cmd/pylens/analyzer/: analyzer.go
cmd/pylens/cmd/: check.go  review.go  root.go  status.go
cmd/pylens/formatter/: formatter.go
cmd/pylens/github/: client.go
cmd/pylens/tui/: tui.go
docs/: architecture.md
tests/: test_analysis.py  test_api.py  test_decision_engine.py  test_integration.py  test_llm.py
web/: index.html  login.html
