[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pylens"
version = "1.0.0"
description = "Plataforma de análise e otimização inteligente de código Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyLens Team"}
]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlmodel==0.0.14",
    "bcrypt==4.1.2",
    "passlib[bcrypt]",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "python-dotenv==1.0.0",
    "httpx",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "networkx>=3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
    "mypy",
]
crystal = [
    "pylens[dev]",
]

[project.scripts]
pylens = "app.main:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
